# deploy

./: README.md
compile_tools/: ._README.md  ._classification.py  ._pilot_rear_light  README.md  classification.py  detection.py  pub_cfg_x3c_mwl.py
compile_tools/compile_softwares/: hbdk_model_verifier-3.28.2-py3-none-linux_x86_64.whl  hbdk_model_verifier-3.34.1.post0.dev202206230141+e489a8b-py3-none-linux_x86_64.whl
compile_tools/pilot_rear_light/: ._README.md  ._pilot_rear_light.pth.tar  README.md
model_infer_visualization_with_python/: ._anchor_visualization.py  ._day_diff.txt  ._model_info.json  ._model_info_20220616.json  ._night_diff.txt  anchor_visualization.py  day_diff.txt  model_info.json  model_info_20220616.json  night_diff.txt
model_infer_visualization_with_python/infer_output/: ._cmd.txt  ._model_infer_output_53.txt  ._model_infer_output_57.txt  ._model_infer_output_58.txt  ._model_infer_output_60.txt  ._model_infer_output_61.txt  cmd.txt  model_infer_input_0.txt  model_infer_output_0.txt  model_infer_output_1.txt  model_infer_output_10.txt  model_infer_output_11.txt  model_infer_output_12.txt  model_infer_output_13.txt  model_infer_output_14.txt  model_infer_output_15.txt  model_infer_output_16.txt  model_infer_output_17.txt  model_infer_output_18.txt  model_infer_output_19.txt  model_infer_output_2.txt  model_infer_output_20.txt  model_infer_output_21.txt  model_infer_output_22.txt  model_infer_output_23.txt  model_infer_output_24.txt  model_infer_output_25.txt  model_infer_output_26.txt  model_infer_output_27.txt  model_infer_output_28.txt  (+41 more)
model_visualization_on_J5/: ._README.md  ._build_and_deploy.sh  CMakeLists.txt  README.md  build_and_deploy.sh  run_sample.sh
model_visualization_on_J5/configs/codec/: j5_codec_config.json
model_visualization_on_J5/configs/model/: inference_config.json
model_visualization_on_J5/configs/vio/: j5_vio_config.json
model_visualization_on_J5/configs/vio/vin/camera/: hb_j5dev.json  j5_camera_source.json
model_visualization_on_J5/configs/vio/vin/network/: j5_network_source.json
model_visualization_on_J5/configs/vio/vpm/ddr_pym0_1080p/: vpm_config.json
model_visualization_on_J5/configs/vio/vpm/sen_cim_isp0_pym0_1080p_ar0233_max9296/: vpm_config.json
model_visualization_on_J5/configs/vio/vpm/sen_cim_isp0_pym0_1080p_ar0233_max96712/: vpm_config.json
model_visualization_on_J5/include/common/: profile.h  vision_type.h
model_visualization_on_J5/include/message/: base_message.h  vio_message.h
model_visualization_on_J5/include/modules/: codec_module.h  inference_module.h  sample_observer.h  vio_module.h  web_display_module.h
model_visualization_on_J5/include/modules/input/: camera_input_module.h  input_module.h  network_input_module.h
model_visualization_on_J5/include/uws_server/: uws_server.h
model_visualization_on_J5/src/: main.cc
model_visualization_on_J5/src/modules/: codec_module.cc  inference_module.cc  vio_module.cc  web_display_module.cc
model_visualization_on_J5/src/modules/input/: camera_input_module.cc  input_module.cc  network_input_module.cc  network_receiver.cc
model_visualization_on_J5/src/utils/: blocking_queue.h  thread_pool.h
model_visualization_on_J5/src/uws_server/: uws_server.cc
model_visualization_on_J5/tools/network_send/: pc_send.py  test_pb2.py
model_visualization_on_J5/tools/webservice/: start_nginx.sh
model_visualization_on_J5/tools/webservice/html/modules/: main.js
(+145 files in other folders)
